--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/chart.js": "^2.7.45",
     "angular-bootstrap-md": "^7.4.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
